# Multiverso

./: CMakeLists.txt  Makefile  MakefileDocker
cmake/modules/: FindZeroMQ.cmake
include/multiverso/: meta.h  server.h
src/: CMakeLists.txt
src/multiverso/: CMakeLists.txt  communicator.cpp  server.cpp
src/multiverso_server/: CMakeLists.txt
