cmake_minimum_required(VERSION 3.1)

PROJECT(MULTIVERSO)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules" ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(ZeroMQ 4.1.3 REQUIRED)
FIND_PACKAGE(MPI REQUIRED)






set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -Wall -std=c++11 -O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare -fno-omit-frame-pointer -fpermissive")



if(THIRD_PARTY)
	SET(THIRD_PARTY ${THIRD_PARTY})
else()
	SET(THIRD_PARTY ${PROJECT_SOURCE_DIR}/third_party)
endif()
SET(THIRD_PARTY_INC ${THIRD_PARTY}/include)
SET(THIRD_PARTY_LIB ${THIRD_PARTY}/lib)

SET(HEADERS_DIR ${PROJECT_SOURCE_DIR}/include/multiverso)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)



ADD_SUBDIRECTORY(src)

